--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,9 +25,7 @@ const pageTitle = "First Year";
         We kept a log of every feed, wee, poo and vomit in response to Doctors
         request for this information every visit (we both work in data). After
         just over a year, the log contained 2,412 entries and we realised it
-        answered many of our initial questions. After processing the data and
-        knowing it only represents one child here are the takeouts that suprised
-        us and would like to share.
+        answered many of our initial questions. Keeping in mind our data only represents one child here are the takeouts that suprised us and would like to share.
     </p>
     <h2>Nappy Changes!</h2>
     <canvas
@@ -42,8 +40,7 @@ const pageTitle = "First Year";
         Six nappy changes a day, on average. Most nappy changes coincided with a
         feed (except for the smelly ones). After the first month, it became
         second nature. After the second month we could get a nappy change done
-        in the same time as an F1 pit stop. Nappy changes were more frequent in
-        the first six months.
+        in the same time as an F1 pit stop. 
     </p>
     <h2>Feeds, Wees, Poos and Vomit</h2>
     <canvas
@@ -57,15 +54,12 @@ const pageTitle = "First Year";
         Vomits were uncommon, contrary to what everyone told us. Vomits did
         usually result in a change of clothes for everyone involved. Vomits were
         usually clumped together (many in a day usually in response to
-        vaccinations or introducing new foods) rather than spread out over time.
-        Poos occur more than once a day however, nappy changes became second
-        nature, see above.
+        vaccinations or introducing new foods) rather than one every once and awhile.
     </p>
     <p>
-        Feeding and eating is very frequent and settled into a regular routine
-        that we learnt to plan around it.
+        Having to deal with a smelly nappy was a more than once a day occurrence. Feeding and eating is very frequent and settled into a regular routine that wasn't hard to plan around.
     </p>
-    <h2>Days and Nights</h2>
+    <h2>Waking at Night</h2>
     <canvas
         id="day-night"
         height="350rem"
@@ -80,25 +74,22 @@ const pageTitle = "First Year";
         <button id="dayNightData">Change Time Period</button>
     </div>
     <p>
-        We only needed feed or change our baby 1.4 times on average per night
-        then falling to 0.9 times. While this seems small for the first five
-        months we were up every night except for nine nights, twice for 59
-        nights (nearly two months!) and were up one night four times. This
-        doesn't include the times where our baby woke up or the times we sat
-        staring at the baby monitor freaking out something bad was about to
-        happen. It is true, sleep is hard to come by in the early months.
+        Many friends and family made us worried about having a baby that woke constantly at night. The graphs shows how many times we had to have a feed or change a nappy grouped into whether it occurred during the day, evening and night, on average. Bigger wedges represents more feeds or nappy changes. 
+    <p>
+    <p>
+        Most nappy changes and feeds occurred during the day between 6 a.m. and 6 p.m. The smallest amount were during 6 p.m. and midnight. Our bub liked an early bedtime and slept soundly during these hours. 
     </p>
     <p>
-        The data is split at six months because our bub started sleeping longer
+        The data is split at five months because our bub started sleeping longer
         and <em>sometimes</em> through the night. Normal development like not
         needing to eat so frequently probably explains why. We parents did start
         to get more sleep after the fist six months.
     </p>
     <p>
-        Our bub did develop their own qwerks like sleeping soundly up until
-        about 2 a.m. and jumping out of bed at 5 a.m. every day. We adjusted to
-        his sleep schedule and we both think 5 a.m. is normal now. How life
-        changes!
+        In the first five months our baby needed a feed or nappy change an average of 1.4 times between midnight and 6 a.m. This may appear quite low seems but keep in mind this is an average. In these first five months, we were up every night except for nine nights, twice for 59 nights (nearly two months!) and were up one night a total of four times. This doesn't include the times where our baby woke up or the times we sat staring at the baby monitor freaking out something bad was about to happen. After six months the number of feeds and nappy changes then falling to 0.9 times. Some nights we were all able to sleep through. 
+    </p>
+    <p>
+        The number of nappy changes didn't fall over time for us in the first five months average feeds and nappy changes was 6.9 and increased to 7.2 from six months. The increase wasn't uniform. The average number of feeds and nappy changes between 6 a.m. and 6 p.m increased from 4.5 to 5.3 while decreasing from 1.4 to 0.9 between midnight and 6 a.m and no change between 6 p.m. and midnight. Our bub became increasingly active and awake from six months leading to an extra feed or nappy change throughout the day probably explains this result.  
     </p>
     <h2>Our Bub</h2>
     <p>
@@ -106,7 +97,7 @@ const pageTitle = "First Year";
         and difficult moments of raising a newborn are easy to describe but the
         love, fun and excitement we share as a family is indescribable. We share
         this information to say using data that the day to day challenges are
-        manageable.
+        manageable. We value our bub's privacy and unfortunately cannot share any pics.
     </p>
     <p>All code is for this site and data analysis is available on github.</p>
 </Layout>
