Updated meta tags
Updates to meta tags for social media.

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,6 +12,17 @@ const { pageTitle } = Astro.props;
         <meta charset="utf-8" />
         <meta name="description" content="First Year with Bub - Real world data on what to expect">
         <meta name="viewport" content="width=device-width" />
+        <!-- Open Graph Meta Tags -->
+        <!-- og meta -->
+        <meta property="og:type" value="website" />
+        <meta property="og:title" value="New to Nappies" />
+        <meta property="og:description" value="First Year with Bub - Real world data on what to expect" />
+        <meta property="og:url" value="https://newtonappies.com/" />
+        <!-- twitter meta -->
+        <meta name="twitter:card" value="summary" />
+        <meta name="twitter:title" value="New to Nappies" />
+        <meta name="twitter:description" value="First Year with Bub - Real world data on what to expect" />
+        <!-- icons and fonts -->
         <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
