--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -9,6 +9,8 @@ const { pageTitle } = Astro.props;
 <!DOCTYPE html>
 <html transition:animate="none" lang="en">
 	<head>
+        <meta name="robots" content="index, follow" />
+        <meta name="googlebot" content="index, follow" />
         <meta charset="utf-8" />
         <meta name="description" content="First Year with Bub - Real world data on what to expect">
         <meta name="viewport" content="width=device-width" />
